kube-pr/database.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: blazor-web-db-deployment
  labels:
    app: blazor-web-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: blazor-web-db
  template:
    metadata:
      labels:
        app: blazor-web-db
    spec:
      containers:
      - name: blazor-web-db
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresstorage
          mountPath: /var/lib/postgresql/data
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgresstorage
        persistentVolumeClaim:
          claimName: blazor-web-db-pvc
      - name: init-script
        configMap:
          name: blazor-web-postgres-init
---
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: blazor-web-db-service
spec:
  type: ClusterIP
  selector:
    app: blazor-web-db
  ports:
    - port: 5432
      targetPort: 5432
